fix url umlaut failing tests